--- a/vignettes/TAME-toolkit-clean.Rmd
+++ b/vignettes/TAME-toolkit-clean.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Automating Access to Chemical Data through the CompTox Dashboard"
+title: "Automating Access to Chemical Data through the CompTox Chemicals Dashboard"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{TAME-toolkit-clean}
@@ -61,7 +61,7 @@ This training module provides an overview of the physico-chemical, hazard, and b
 
 This training module was specifically developed to answer the following questions:
 
-1. After automatically pulling the fourth Drinking Water Contaminant Candidate List from the CompTox Dashboard, list the properties and property types present in the data. What are the mean values for a specific property when grouped by property type and when ungrouped?
+1. After automatically pulling the fourth Drinking Water Contaminant Candidate List from the CompTox Chemicals Dashboard, list the properties and property types present in the data. What are the mean values for a specific property when grouped by property type and when ungrouped?
 
 2. The physico-chemical property data are reported with both experimental and predicted values present for many chemicals. Are there differences between the mean predicted and experimental results for a variety of physico-chemical properties?
 
@@ -174,27 +174,27 @@ The APIs are organized into three sets of "endpoints" (chemical data domains): `
 
 The APIs can be explored through the pictured web interface at https://api-ccte.epa.gov/docs/chemical.html .
 
-### CCD API Authentication
+### CCTE API Authentication
 
-"Authentication" is the first tab on the left. Authentication is required to use the APIs. To authenticate yourself in the API web interface, input your unique API key.
+`Authentication` is the first tab on the left. Authentication is required to use the APIs. To authenticate yourself in the API web interface, input your unique API key.
 
 
 ![Fig 5: CCTE API Key Authentication](./Pictures/CCTE_API_Key_authentication.png){width=120%}
 
 
-### CCD API Endpoints
+### CCTE API Endpoints
 
 
-On the left of the API web interface, there are several different tabs, one for each endpoint in the "Chemical" domain. The endpoints are organized by the type of information provided. For instance, the `Chemical Details Resource` endpoint provides basic chemical information; the `Chemical Property Resource` endpoint provides more comprehensive physico-chemical property information; the `Chemical Fate Resource` endpoint provides chemical fate and transport information; and so on. 
+On the left of the API web interface, there are several different tabs, one for each endpoint in the `Chemical` domain. The endpoints are organized by the type of information provided. For instance, the `Chemical Details Resource` endpoint provides basic chemical information; the `Chemical Property Resource` endpoint provides more comprehensive physico-chemical property information; the `Chemical Fate Resource` endpoint provides chemical fate and transport information; and so on. 
 
 
-### Constructing CCD API Requests
+### Constructing CCTE API Requests
 
 As mentioned above, APIs effectively automate the process of accessing and downloading data from the web pages that make up the CCD. APIs do this by automatically constructing requests using the Hypertext Transfer Protocol (HTTP) that enables communication between clients (e.g. your computer) and servers (e.g. the CCD).
 
-In the CCD API web interface, the colored boxes next to each endpoint indicate the type of the associated HTTP method: either a GET request ("GET", blue) or a a POST request ("POS", green). GET is used to request data from a specific web resource (e.g. a specific URL); POST is used to send data to a server to create or update a web resource. For the CCD APIs, POST requests are used to perform multiple (batch) searches in a single API call; GET requests are used for non-batch searches. You do not need to understand the details of POST and GET requests in order to use the API.
+In the CCTE API web interface, the colored boxes next to each endpoint indicate the type of the associated HTTP method: either a GET request ("GET", blue) or a a POST request ("POS", green). GET is used to request data from a specific web resource (e.g. a specific URL); POST is used to send data to a server to create or update a web resource. For the CCTE APIs, POST requests are used to perform multiple (batch) searches in a single API call; GET requests are used for non-batch searches. You do not need to understand the details of POST and GET requests in order to use the API.
 
-Click on the second item under `Chemical Details Resource`, the tab labeled `Get data by DTXSID`. The following page will appear.
+Click on the second item under `Chemical Details Resource`, the tab labeled `Get data by dtxsid`. The following page will appear.
 
 ![Fig 6: CCTE Get Details by DTXSID](./Pictures/Get_Data_by_DTXSID_TOP.png){width=120%}
 
@@ -215,24 +215,13 @@ We show what returned data from searching Bisphenol A looks like using this endp
 
 Formatting an http request is not necessarily intuitive nor worth the time for someone not already familiar with the process, so these endpoints may provide a resource that for many would require a significant investment in time and energy to learn how to use. However, there is a solution to this in the form of the R package `ccdR`.
 
-`ccdR` was developed to streamline the process of accessing the information available through the CCTE APIs without requiring prior knowledge of how to use APIs. As an example, we demonstrate the ease with which one may retrieve the information given by this endpoint for Bisphenol A using the `ccdR` approach and contrast it with the approach using the CCD or CCTE Chemical Endpoint website.
+`ccdR` was developed to streamline the process of accessing the information available through the CCTE APIs without requiring prior knowledge of how to use APIs. As an example, we demonstrate the ease with which one may retrieve the information given by this endpoint for Bisphenol A using the `ccdR` approach and contrast it with the approach using the CCD website or CCTE `Chemical` Endpoint website.
 
-First, we load in `ccdR` and other libraries we will need for this module.
 
-#### Installing required R packages
 
-```{r, eval = FALSE}
-if (!requireNamespace('ccdR'))
-  install.packages('ccdR');
-```
+#### Setting, using, and storing the API key
 
-#### Loading R packages required for this session
-
-```{r, eval = FALSE}
-library(ccdR)
-```
-
-Now we store the API key required to access the APIs. To do this for the current session, run the first command. If you want to store your key across multiple sessions, run the second command.
+We store the API key required to access the APIs. To do this for the current session, run the first command. If you want to store your key across multiple sessions, run the second command.
 
 ```{r, eval=FALSE}
 # This stores the key in the current session
@@ -248,6 +237,9 @@ To check that your key has successfully been stored for the session, run the fol
 ```{r, eval=FALSE}
 ccte_key()
 ```
+
+#### Retrieving chemical details
+
 Now, we demonstrate how to retrieve the information for BPA given by the `Chemical Detail Resource` endpoint under the `chemicaldetailstandard` value for `projection`. Note, this `projection` value is the default value for the function `get_chemical_details()`.
 
 ```{r}
@@ -330,7 +322,7 @@ ccl4_phys_chem[, unique(propertyId)]
 ccl4_phys_chem[, unique(propType)]
 ```
 
-Let's explore this further by examining the mean of the 'boiling-point' and 'melting-point' data.
+Let's explore this further by examining the mean of the "boiling-point" and "melting-point" data.
 
 ```{r}
 ccl4_phys_chem[propertyId == 'boiling-point', .(Mean = mean(value))]
@@ -344,12 +336,12 @@ ccl4_phys_chem[propertyId == 'melting-point', .(Mean = mean(value)),
 
 These results tell us about some of the reported physico-chemical properties of the data sets.
 
-*With this, we can answer **Environmental Health Question 1**:* After automatically pulling the fourth Drinking Water Contaminant Candidate List from the CompTox Dashboard, list the properties and property types present in the data. What are the mean values for a specific property when grouped by property type and when ungrouped?
+*With this, we can answer **Environmental Health Question 1**:* After automatically pulling the fourth Drinking Water Contaminant Candidate List from the CompTox Chemicals Dashboard, list the properties and property types present in the data. What are the mean values for a specific property when grouped by property type and when ungrouped?
 
-**Answer:** The mean 'boiling-point' is 251.1072 degrees Celsius for CCL4, with mean values of 250.5943 and 251.4001 for experimental and predicted, respectively. The mean 'melting-point' is 33.93924 degrees Celsius for CCL4, with mean values of 23.18876 and 47.98422 for experimental and predicted, respectively.
+**Answer:** The mean "boiling-point" is 251.1072 degrees Celsius for CCL4, with mean values of 250.5943 and 251.4001 for experimental and predicted, respectively. The mean "melting-point" is 33.93924 degrees Celsius for CCL4, with mean values of 23.18876 and 47.98422 for experimental and predicted, respectively.
 
 
-To explore **all** the values of the physico-chemical properties and calculate their means, we can do the following procedure. First we look at all the physico-chemical properties individually, then group them by each property ('boiling-point', 'melting-point', etc...), and then additionally group those by property type ('experimental' vs 'predicted'). In the grouping, we look at the columns `value`, `unit`, `propertyID` and `propType`. We also demonstrate how take the mean of the values for each grouping.
+To explore **all** the values of the physico-chemical properties and calculate their means, we can do the following procedure. First we look at all the physico-chemical properties individually, then group them by each property ("boiling-point", "melting-point", etc...), and then additionally group those by property type ("experimental" vs "predicted"). In the grouping, we look at the columns `value`, `unit`, `propertyID` and `propType`. We also demonstrate how take the mean of the values for each grouping.
 
 ```{r}
 head(ccl4_phys_chem[dtxsid == ccl4$dtxsid[[1]], ])
@@ -367,7 +359,7 @@ ccl4_phys_chem[dtxsid == ccl4$dtxsid[[1]], .(Mean_value = sapply(.SD, mean)),
 
 ### Analyzing and visualizing physico-chemical properties from two environmental contaminant lists
 
-We consider exploring the differences in mean predicted and experimental values for a variety of physico-chemical properties in an effort to understand better the CCL4 and NATADB lists. In particular, we examine 'vapor-pressure', 'henrys-law', and 'boiling-point' and plot the means by chemical for these using boxplots. We then compare the values by grouping by both data set and `propType` value.
+We consider exploring the differences in mean predicted and experimental values for a variety of physico-chemical properties in an effort to understand better the CCL4 and NATADB lists. In particular, we examine "vapor-pressure", "henrys-law", and "boiling-point" and plot the means by chemical for these using boxplots. We then compare the values by grouping by both data set and `propType` value.
 
 
 
@@ -440,7 +432,7 @@ ggplot(natadb_vapor_grouped, aes(propType, log_transform_mean_vapor_pressure)) +
   geom_boxplot()
 ```
 
-Finally, we compare both sets simultaneously. We add in a column to each data.table denoting to which data set the rows correspond and then `rbind` the rows from both data sets together.
+Finally, we compare both sets simultaneously. We add in a column to each data.table denoting to which data set the rows correspond and then combine the rows from both data sets together using the function `rbind()`.
 
 ```{r}
 ccl4_vapor_grouped[, set := 'CCL4']
@@ -513,7 +505,7 @@ natadb_hlc_all[, log_transform_mean_hlc := log(mean_hlc)]
 natadb_hlc_grouped[, log_transform_mean_hlc := log(mean_hlc)]
 ```
 
-We compare both sets simultaneously. We add in a column to each data.table denoting to which set the rows correspond and then `rbind` the rows together.
+We compare both sets simultaneously. We add in a column to each data.table denoting to which set the rows correspond and then `rbind()` the rows together.
 
 
 Label and combine data.
@@ -587,7 +579,7 @@ natadb_boiling_all[, log_transform := log(mean_boiling_point)]
 natadb_boiling_grouped[, log_transform := log(mean_boiling_point)]
 ```
 
-We compare both sets simultaneously. We add in a column to each data.table denoting to which set the rows correspond and then `rbind` the rows together. We use the values as is rather than transforming them.
+We compare both sets simultaneously. We add in a column to each data.table denoting to which set the rows correspond and then `rbind()` the rows together. We use the values as is rather than transforming them.
 
 Label and combine data.
 
@@ -610,11 +602,11 @@ boiling <- ggplot(all_boiling_grouped, aes(mean_boiling_point)) +
 boiling
 ```
 
-A visual inspection of this set of graphs is not as clear as in the previous cases. Note that the predicted values for each data set tend to be higher than the experimental. The mean of CCL4, by predicted and experimental appears to be greater than the corresponding means for NATADB, as does the overall mean, but the interquartile ranges of these different groupings yield slightly different results. This gives us a sense that the picture for boiling point is not as clear cut between experimental and predicted for these two data sets as the previous physico-chemical properties we investigated.
+A visual inspection of this set of graphs is not as clear as in the previous cases. Note that the predicted values for each data set tend to be higher than the experimental. The mean of CCL4, by predicted and experimental appears to be greater than the corresponding means for NATADB, as does the overall mean, but the interquartile ranges of these different groupings yield slightly different results. This gives us a sense that the picture for boiling point is not as clear cut between experimental and predicted for these two data sets as it was in the previous cases of physico-chemical properties we investigated.
 
 *Through inspecting the last several plots, we can answer **Environmental Health Question 2**:* The physico-chemical property data are reported with both experimental and predicted values present for many chemicals. Are there differences between the mean predicted and experimental results for a variety of physico-chemical properties? 
 
-**Answer**: There are indeed differences between the mean values of various physico-chemical properties when grouped by predicted or experimental. In the case of 'vapor-pressure', the means of predicted values tend to be a little lower than experimental, though they are much closer in the case of NATADB than CCL4. The trend of lower predicted means compared to experimental means is more clearly demonstrated for 'henrys-law' values in both data sets. In the case of 'boiling-point', the predicted values are greater than the experimental values, though this is much more pronounced in CCL4 while the set of means for NATADB are again fairly close. 
+**Answer**: There are indeed differences between the mean values of various physico-chemical properties when grouped by predicted or experimental. In the case of "vapor-pressure", the means of predicted values tend to be a little lower than experimental, though they are much closer in the case of NATADB than CCL4. The trend of lower predicted means compared to experimental means is more clearly demonstrated for "henrys-law" values in both data sets. In the case of "boiling-point", the predicted values are greater than the experimental values, though this is much more pronounced in CCL4 while the set of means for NATADB are again fairly close. 
 
 
 
@@ -635,13 +627,13 @@ Once one navigates to the genotoxicity tab highlighted in the previous page, the
 
 This page includes two sets of information, the first of which provides a summary of available genotoxicity data while the second provides the individual reports and samples of such data.
 
-We again use the CCTE APIs to streamline the process of retrieving this information in a programmatic fashion. To this end, we will use the genotoxicity endpoints found within the hazard endpoints of the CCTE APIs. Pictured below in Figure 11 is the particular set of genotoxicity resources available in the hazard endpoints of the CCTE APIs.
+We again use the CCTE APIs to streamline the process of retrieving this information in a programmatic fashion. To this end, we will use the genotoxicity endpoints found within the `Hazard` endpoints of the CCTE APIs. Pictured below in Figure 11 is the particular set of genotoxicity resources available in the `Hazard` endpoints of the CCTE APIs.
 
 ![Fig 11: CCTE APIs Hazard endpoint genotoxicity resources](./Pictures/Hazard_-_genotoxicity_resource.png){width=120%}
 
 There are both summary and detail resources, reflecting the information one can find on the CompTox Chemicals Dashboard Genotoxicity page for a given chemical.
 
-To access the genetox endpoint, we will use the function `get_genetox_summary`. Since we have a list of chemicals, rather than searching individually for each chemical, we use the batch search version of the function, named `get_genetox_summary_batch`. We will examine this and then access the details.
+To access the genetox endpoint, we will use the function `get_genetox_summary()`. Since we have a list of chemicals, rather than searching individually for each chemical, we use the batch search version of the function, named `get_genetox_summary_batch()`. We will examine this and then access the details.
 
 Grab the data using the APIs.
 ```{r}
@@ -674,7 +666,7 @@ natadb[!(dtxsid %in% natadb_genetox$dtxsid),
        .(dtxsid, casrn, preferredName, molFormula)]
 ```
 
-Now, we access the genotoxicity details of the chemicals in each data set using the function `get_genetox_details_batch`. We explore the dimensions of the returned queries, the column names, and the first few lines of the data.
+Now, we access the genotoxicity details of the chemicals in each data set using the function `get_genetox_details_batch()`. We explore the dimensions of the returned queries, the column names, and the first few lines of the data.
 
 Grab the data from the CCTE APIs.
 
@@ -740,7 +732,7 @@ natadb_genetox_details[, unique(assayType)]
 
 
 
-Determine the number of assays per unique `assayCategory`.
+Determine the number of assays per unique `assayCategory` value.
 
 ```{r}
 ccl4_genetox_details[, .(Assays = length(unique(assayType))), 
@@ -751,14 +743,14 @@ natadb_genetox_details[, .(Assays = length(unique(assayType))),
 ```
 
 
-We can analyze these results more closely, counting the number of assay results and grouping by `assayCategory`, and `assayType`. We also examine the different numbers of `assayCategory` and `assayTypes` used.
+We can analyze these results more closely, counting the number of assay results and grouping by `assayCategory`, and `assayType`. We also examine the different numbers of `assayCategory` and `assayTypes` values used.
 
 ```{r}
 ccl4_genetox_details[, .N, by = .(assayCategory, assayType, assayResult)]
 ccl4_genetox_details[, .N, by = .(assayCategory)]
 ```
 
-We look at the `assayTypes` and numbers of each for the three different `assayCategory` values.
+We look at the `assayType` values and numbers of each for the three different `assayCategory` values.
 
 ```{r}
 ccl4_genetox_details[assayCategory == 'in vitro', .N, by = .(assayType)]
@@ -783,10 +775,10 @@ natadb_genetox_details[assayCategory == 'in vivo', .N, by = .(assayType)]
 
 *From these initial explorations of the data, we can answer **Environmental Health Question 3**:* After pulling the genotoxicity data for the different environmental contaminant data sets, list the assays associated with the chemicals in each data set. How many unique assays are there in each data set? What are the different assay categories and how many unique assays for each assay category are there?
 
-**Answer**: There are 90 unique assays for CCl4 and 114 unique assays for NATADB. The different assay categories are 'in vitro', 'ND', and 'in vivo', with 65 unique 'in vitro' assays for CCl4 and 83 for NATADB, 3 unique 'ND' assays for CCL4 and 3 for NATADB, and 22 unique 'in vivo' assays for CCL4 and 28 for NATADB.
+**Answer**: There are 90 unique assays for CCl4 and 114 unique assays for NATADB. The different assay categories are "in vitro", "ND", and "in vivo", with 65 unique "in vitro" assays for CCl4 and 83 for NATADB, 3 unique "ND" assays for CCL4 and 3 for NATADB, and 22 unique "in vivo" assays for CCL4 and 28 for NATADB.
 
 
-Next, we dig into the results of the assays. One may be interested in looking at the number of chemicals for which an assay resulted in a positive or negative result for instance. We group by `assayResult` and determine the number of unique `dtxsids` associated with each value.
+Next, we dig into the results of the assays. One may be interested in looking at the number of chemicals for which an assay resulted in a positive or negative result for instance. We group by `assayResult` and determine the number of unique `dtxsid` values associated with each `assayResult` value.
 
 ```{r}
 ccl4_genetox_details[, .(DTXSIDs = length(unique(dtxsid))), by = .(assayResult)]
@@ -806,7 +798,7 @@ natadb_genetox_details[, .(is_positive = any(assayResult == 'positive')),
                        by = .(dtxsid)][is_positive == TRUE, dtxsid]
 ```
 
-With so much genotoxicity data, let us explore this data for one chemical more deeply to get a sense of the assays and results present for it. We will explore the chemical with DTXSID0020153. We will look at the assays, the number of each type of result, and which correspond to 'positive' results. To determine this, we group by `assayResult` and calculate .N for each group. We also isolate which were positive and output a data.table with the number of each type.
+With so much genotoxicity data, let us explore this data for one chemical more deeply to get a sense of the assays and results present for it. We will explore the chemical with DTXSID0020153. We will look at the assays, the number of each type of result, and which correspond to "positive" results. To determine this, we group by `assayResult` and calculate `.N` for each group. We also isolate which were positive and output a data.table with the number of each type.
 
 ```{r}
 ccl4_genetox_details[dtxsid == 'DTXSID0020153', .(Number = .N), 
@@ -817,7 +809,7 @@ ccl4_genetox_details[dtxsid == 'DTXSID0020153' & assayResult == 'positive',
 
 *With these data.tables, we may answer **Environmental Health Question 5**:* Based on the genotoxicity data reported for the chemical with DTXSID identifier DTXSID0020153, how many assays resulted in a positive/equivocal/negative value? Which of the assays were positive and how many of each were there for the most reported assays?
 
-**Answer**: There were five assays that produced a negative result, 22 that produced a positive result, and one that produced an equivocal result. Of the 22 positive assays, 'bacterial reverse mutation assay' and 'Ames' were the most numerous, with three each.
+**Answer**: There were five assays that produced a negative result, 22 that produced a positive result, and one that produced an equivocal result. Of the 22 positive assays, "bacterial reverse mutation assay" and "Ames" were the most numerous, with three each.
 
 
 
@@ -882,7 +874,7 @@ natadb_hazard[ supercategory %in% 'Point of Departure', .N,
                by = .(toxvalType)][order(-N),]
 ```
 
-We explore 'NOEL' and 'LOEL' further. Let us look at the the case when `media` value is either 'soil' or 'water'. For this, we will recover the minimum value of 'LOEL' and 'NOEL' for each chemical in each data set.
+We explore "NOEL" and "LOEL" further. Let us look at the the case when `media` value is either "soil" or "water". For this, we will recover the minimum value of "LOEL" and "NOEL" for each chemical in each data set.
 
 First, we look at soil. We order by `toxvalType` and by the minimum `toxvalNumeric` value in each group, descending.
 
@@ -938,7 +930,7 @@ natadb_hazard[humanEcoNt %in% 'human health' &
 
 *With these results we may answer **Environmental Health Question 6**:* After pulling the hazard data for the different data sets, list the different exposure routes for which there is data. What are the unique risk assessment classes for hazard values for the oral route and for the inhalation exposure route? For each such exposure route, which risk assessment class is most represented by the data sets?
 
-**Answer**: We listed the general exposure routes above for the hazard data associated with the chemicals in each data set. Restricting our attention to human hazard data, the 'acute' `riskAssessmentClass` is most represented by the inhalation exposure route and 'chronic' for the oral exposure route for both the CCL4 and NATADB data sets. 
+**Answer**: We listed the general exposure routes above for the hazard data associated with the chemicals in each data set. Restricting our attention to human hazard data, the "acute" `riskAssessmentClass` is most represented by the inhalation exposure route and "chronic" for the oral exposure route for both the CCL4 and NATADB data sets. 
 
 
 
@@ -973,7 +965,7 @@ intersect(natadb_hazard[humanEcoNt %in% 'human health' & exposureRoute %in% 'inh
 **Answer**: There are 24 toxicity value types shared between the oral and inhalation exposure routes for CCL4 and 29 for NATADB. The lists above indicate the variety of toxicity values present in the hazard data for the two different exposure routes we have considered.
 
 
-For the next data exploration, We will turn to the `riskAssessmentClass` value of 'developmental'. We will examine the 'NOEL' and 'LOEL' values for chemicals with oral exposure, human hazard, and a `riskAssessmentClass` value of 'developmental'. We also examine the units to determine whether any unit conversions are necessary to compare numeric values.
+For the next data exploration, We will turn to the `riskAssessmentClass` value of "developmental". We will examine the "NOEL" and "LOEL" values for chemicals with oral exposure, human hazard, and a `riskAssessmentClass` value of "developmental". We also examine the units to determine whether any unit conversions are necessary to compare numeric values.
 
 ```{r}
 ccl4_hazard[humanEcoNt %in% 'human health' & exposureRoute %in% 'oral' &
@@ -990,7 +982,7 @@ natadb_hazard[humanEcoNt %in% 'human health' & exposureRoute %in% 'oral' &
                 toxvalType %in% c('NOEL', 'LOEL'), unique(toxvalUnits)]
 ```
 
-Observe that for CCL4, the units are given by 'mg/kg-day' and 'ppm', while the units for NATADB are given by 'mg/kg-day', 'ppm', and 'ml/kg'. It is the case that 'mg/kg-day' and 'ppm' are comparable ratios. We ignore the 'ml/kg' units for now and group by DTXSID to find the lowest or highest value.
+Observe that for CCL4, the units are given by "mg/kg-day" and "ppm", while the units for NATADB are given by "mg/kg-day", "ppm", and "ml/kg". It is the case that "mg/kg-day" and "ppm" are comparable ratios. We ignore the "ml/kg" units for now and group by DTXSID to find the lowest or highest value.
 
 ```{r}
 ccl4_hazard[humanEcoNt %in% 'human health' & exposureRoute %in% 'oral' &
@@ -1001,13 +993,13 @@ ccl4_hazard[humanEcoNt %in% 'human health' & exposureRoute %in% 'oral' &
             by = .(dtxsid, toxvalType)]
 natadb_hazard[humanEcoNt %in% 'human health' & exposureRoute %in% 'oral' &
               riskAssessmentClass %in% 'developmental' & 
-              toxvalType %in% c('NOEL', 'LOEL'), 
+              toxvalType %in% c('NOEL', 'LOEL') & !(toxvalUnits %in% 'ml/kg'), 
               .(numeric_value = min(toxvalNumeric), 
               units = toxvalUnits[[which.min(toxvalNumeric)]]), 
               by = .(dtxsid, toxvalType)]
 ```
 
-Now, we also explore the values of 'RfD', 'RfC', and 'cancer slope factor' of the `toxvalType` rows. We first determine the set of units for each, make appropriate conversions if necessary, and then make comparisons.
+Now, we also explore the values of "RfD", "RfC", and "cancer slope factor" of the `toxvalType` rows. We first determine the set of units for each, make appropriate conversions if necessary, and then make comparisons.
 
 ```{r}
 ccl4_hazard[humanEcoNt %in% 'human health' & toxvalType %in% 
@@ -1017,7 +1009,7 @@ natadb_hazard[humanEcoNt %in% 'human health' & toxvalType %in%
               c('cancer slope factor', 'RfD', 'RfC'), .N, 
               by = .(toxvalType, toxvalUnits)][order(toxvalType, -N)]
 ```
-For CCL4, there are three inequivalent sets of units that need conversions. We convert to 'mg/m3', which means scaling values given in 'g/m3' by 1E3 and values given in 'ug/m3' by 1E-3. The Rfd units and cancer slope factor units require no conversions.
+For CCL4, there are three inequivalent sets of units that need conversions. We convert to "mg/m3", which means scaling values given in "g/m3" by 1E3 and values given in "ug/m3" by 1E-3. The Rfd units and cancer slope factor units require no conversions.
 
 For NATADB, we need to convert RfC values from ppm to mg/m3, with a conversion factor that relies on the molecular weight of the chemical in question. We will remove these from consideration for now. The units for RfD and cancer slope factor require no conversions.
 
@@ -1100,7 +1092,7 @@ natadb_rfd[, .(numeric_value = min(toxvalNumeric),
 
 *With these results, we may answer **Environmental Health Question 8**:* When examining different toxicity values, the data may be reported in multiple units. To assess the relative hazard from this data, it is important to take into account the different units and adjust accordingly. List the units reported for the cancer slope factor, reference dose, and reference concentration values associated with the oral and inhalation exposure routes for human hazard. Which chemicals in each data set have the highest cancer slope factor, lowest reference dose, and lowest reference concentration values?
 
-**Answer**: The units for these three toxicity value types for CCL4 are given by 'mg/m3', 'g/m3', 'ug/m3' for RfC, 'mg/kg-day', 'mg/kg' for RfD, and '(mg/kg-day)-1' for Cancer Slope Factor. For NATADB, the units for RfC are given by 'mg/m3' and 'ppm', for RfD by 'mg/kg-day', 'mg/kg', and for Cancer Slope Factor by '(mg/kg-day)-1'.  For CCL4, the chemical DTXSID2021028 has the highest CsF at 150 (mg/kg-day)-1, the chemical DTXSID1031040 has the lowest RfC value at 6.0e-9 mg/m3, and the chemical DTXSID7021029 has the lowest RfD value at 4e-6 mg/kg. For NATADB, the chemical DTXSID2020137 has the highest CsF at 500 (mg/kg-day)-1, the chemical DTXSID1020516 has the lowest RfC value at 2.0e-6 mg/m3, and the chemical DTXSID7021029 had the lowest RfD at 4e-6 mg/kg-day.
+**Answer**: The units for these three toxicity value types for CCL4 are given by "mg/m3", "g/m3", "ug/m3" for RfC, "mg/kg-day", "mg/kg" for RfD, and "(mg/kg-day)-1" for Cancer Slope Factor. For NATADB, the units for RfC are given by "mg/m3" and "ppm", for RfD by "mg/kg-day", "mg/kg", and for Cancer Slope Factor by "(mg/kg-day)-1".  For CCL4, the chemical DTXSID2021028 has the highest CsF at 150 (mg/kg-day)-1, the chemical DTXSID1031040 has the lowest RfC value at 6.0e-9 mg/m3, and the chemical DTXSID7021029 has the lowest RfD value at 4e-6 mg/kg. For NATADB, the chemical DTXSID2020137 has the highest CsF at 500 (mg/kg-day)-1, the chemical DTXSID1020516 has the lowest RfC value at 2.0e-6 mg/m3, and the chemical DTXSID7021029 had the lowest RfD at 4e-6 mg/kg-day.
 
 ## Concluding remarks
 
